--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,35 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.title {
+  font-size: 200px;
+  font-family: "Cabin";
+  font-weight: 500;
+}
+
+.button {
+  border-radius: 50px;
+  border-color: rgb(248, 76, 76);
+  outline: none;
+  background: none;
+  border-style: solid;
+  border-width: 2px;
+  padding: 15px;
+  font-size: 20px;
+  font-family: "Cabin";
+  font-weight: 900;
+  color: rgb(31, 31, 31);
+  transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+  cursor: pointer;
+}
+
+.button:hover {
+  background: rgb(248, 76, 76);
+  color: white;
+}
+
+.button:active {
+  border-color: rgb(201, 49, 49);
+  background-color: rgb(201, 49, 49);
+}
