--- a/styles/about.css
+++ b/styles/about.css
@@ -5,14 +5,30 @@
 
 #about-content {
   display: grid;
-  justify-content: center;
+  justify-items: center;
 }
 
 #about-title {
   margin-top: 200px;
   font-size: 100px;
+  margin-bottom: 100px;
+  text-align: center;
 }
 
 #about-covid {
   color: rgb(248, 76, 76);
+}
+
+.about-text {
+  font-size: 20px;
+  font-family: "Cabin";
+  max-width: 1000px;
+  width: 90%;
+  margin-bottom: 40px;
+}
+
+@media screen and (max-width: 1050px) {
+  #about-title {
+    font-size: 50px;
+  }
 }
