--- a/styles/feedback.css
+++ b/styles/feedback.css
@@ -12,4 +12,60 @@
 
 .feedback-title {
   font-size: 100px;
+  margin-bottom: 20px;
+  line-height: 1;
+}
+
+#feedback-input-wrapper {
+  display: grid;
+  justify-content: center;
+}
+
+.feedback-input {
+  text-decoration: none;
+  outline: none;
+  max-width: 200px;
+  width: 100%;
+  height: 40px;
+  font-family: "Cabin";
+  font-weight: 100;
+  font-size: 15px;
+  padding-left: 8px;
+  background-color: rgb(240, 240, 240);
+  border: rgb(146, 146, 146);
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 10px;
+  transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+  margin-bottom: 20px;
+}
+
+.feedback-input:focus {
+  background-color: white;
+}
+
+#feedback-name-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+#feedback-email {
+  max-width: 420px;
+  width: 100%;
+}
+
+.feedback-textarea {
+  padding-top: 10px;
+  max-width: 420px;
+  height: 300px;
+  width: 100%;
+}
+
+@media screen and (max-width: 500px) {
+  .feedback-title {
+    font-size: 40px;
+  }
+  #feedback-name-wrapper {
+    flex-direction: column;
+  }
 }
