--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,3 +88,10 @@ a {
   left: 9px;
   box-shadow: 0px 0px 2px 2px#d4d4d4;
 }
+
+.seperator {
+  width: 200px;
+  height: 1px;
+  background-color: rgb(31, 31, 31);
+  margin-top: 40px;
+}
