--- a/styles/home.css
+++ b/styles/home.css
@@ -12,12 +12,39 @@
 }
 
 #home-title {
+  line-height: 1;
   color: rgb(31, 31, 31);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 #home-covid {
   color: rgb(248, 76, 76);
+}
+
+#home-data-wrapper {
+  margin-top: 40px;
+}
+
+.home-data-source {
+  border-left: rgb(248, 76, 76);
+  border-left-style: solid;
+  border-left-width: 4px;
+  padding-left: 20px;
+  margin-top: 20px;
+  background: linear-gradient(to left, #ffffff 50%, rgb(248, 76, 76) 50%) right;
+  background-size: 200%;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 20px;
+  cursor: pointer;
+  width: max-content;
+  transition: 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.home-data-source:hover {
+  background-position: left;
+  color: white;
+  border-radius: 100px;
 }
 
 @media screen and (max-width: 1300px) {
